--- a/web/readme.html
+++ b/web/readme.html
@@ -28,12 +28,15 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>2015-08-24</b>
+    Version: <b>2015-10-05</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
+    <h5 style="text-decoration: underline;">October</h5>
+    <p>05 October 2015: Changing LoginFilter code to fix using email as username bug.</p>
+    
     <h5 style="text-decoration: underline;">August</h5>
     <p>24 August 2015: Visual changes following Korina's suggestions doc.</p>
     <p>13 August 2015: Updated source analyzer functionality. Now domain source value is taken into account when user fills link source values. 
