Added generator policy functionality
User may now upload generator policy file and also use new "auto" mode
when filling in instance generator info.

--- a/web/readme.html
+++ b/web/readme.html
@@ -28,15 +28,19 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>2015-10-05</b>
+    Version: <b>2015-10-16</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
     <h5 style="text-decoration: underline;">October</h5>
+    <p>16 October 2015: Instance generator now has a new "auto" mode, which at the moment provides user 
+        with valid instance generator names (if a generator policy file is uploaded). Next step will be 
+    to find valid arg names when a generator is selected.</p>
+    <p>14 October 2015: Added policy generator upload functionality (requires schema change)</p>
     <p>05 October 2015: Changing LoginFilter code to fix using email as username bug.</p>
-    
+
     <h5 style="text-decoration: underline;">August</h5>
     <p>24 August 2015: Visual changes following Korina's suggestions doc.</p>
     <p>13 August 2015: Updated source analyzer functionality. Now domain source value is taken into account when user fills link source values. 
