Improved findMime method

--- a/web/readme.html
+++ b/web/readme.html
@@ -35,6 +35,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <legend>Changelog</legend>
 
     <h5 style="text-decoration: underline;">October</h5>
+    <p>20 October 2015: Improved findMime method.</p>
     <p>16 October 2015: Instance generator now has a new "auto" mode, which at the moment provides user 
         with valid instance generator names (if a generator policy file is uploaded). Next step will be 
     to find valid arg names when a generator is selected.</p>
