Debugging static issues

--- a/web/readme.html
+++ b/web/readme.html
@@ -28,13 +28,14 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>2015-10-16</b>
+    Version: <b>2015-10-23</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
     <h5 style="text-decoration: underline;">October</h5>
+    <p>23 October 2015: Debugging static issues.</p>
     <p>20 October 2015: Improved findMime method.</p>
     <p>16 October 2015: Instance generator now has a new "auto" mode, which at the moment provides user 
         with valid instance generator names (if a generator policy file is uploaded). Next step will be 
