--- a/web/readme.html
+++ b/web/readme.html
@@ -28,18 +28,19 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>2015-10-23</b>
+    Version: <b>2015-10-26</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
     <h5 style="text-decoration: underline;">October</h5>
+    <p>26 October 2015: Improving generators "auto" mode.</p>
     <p>23 October 2015: Debugging static issues.</p>
     <p>20 October 2015: Improved findMime method.</p>
     <p>16 October 2015: Instance generator now has a new "auto" mode, which at the moment provides user 
         with valid instance generator names (if a generator policy file is uploaded). Next step will be 
-    to find valid arg names when a generator is selected.</p>
+        to find valid arg names when a generator is selected.</p>
     <p>14 October 2015: Added policy generator upload functionality (requires schema change)</p>
     <p>05 October 2015: Changing LoginFilter code to fix using email as username bug.</p>
 
