Extending auto mode for label generators.

--- a/web/readme.html
+++ b/web/readme.html
@@ -28,13 +28,14 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>2015-10-26</b>
+    Version: <b>2015-10-27</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
     <h5 style="text-decoration: underline;">October</h5>
+    <p>27 October 2015: Extending new "auto" mode for label generators too.</p>
     <p>26 October 2015: Improving generators "auto" mode.</p>
     <p>23 October 2015: Debugging static issues.</p>
     <p>20 October 2015: Improved findMime method.</p>
