Last edited matching table row highlight.

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -28,11 +28,15 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>2015-10-27</b>
+    Version: <b>2015-11-04</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
+
+    <h5 style="text-decoration: underline;">November</h5>   
+    <p>04 November 2015: Last edited matching table row is now highlighted for 10 seconds.</p>
+    <p>03 November 2015: Project mavenized. Source Analyzer combos are filled with relative paths, removing the "domain" part.</p>
 
     <h5 style="text-decoration: underline;">October</h5>
     <p>27 October 2015: Extending new "auto" mode for label generators too.</p>
