--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -35,7 +35,8 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <legend>Changelog</legend>
 
     <h5 style="text-decoration: underline;">November</h5>   
-    <p>04 November 2015: Last edited matching table row is now highlighted for 10 seconds.</p>
+    <p>04 November 2015: Last edited matching table row is now highlighted for 10 seconds. Added new option in Configuration tab to choose between stripped or full
+    source xpaths. Also changed configuration tab layout. Fixed bug (when adding a new map, html was not updated due to a javascript exception).</p>
     <p>03 November 2015: Project mavenized. Source Analyzer combos are filled with relative paths, removing the "domain" part.</p>
 
     <h5 style="text-decoration: underline;">October</h5>
