Improving info tab, adding help text and fixing problems.

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -28,15 +28,18 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>2015-11-04</b>
+    Version: <b>2015-11-13</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
-    <h5 style="text-decoration: underline;">November</h5>   
+    <h5 style="text-decoration: underline;">November</h5> 
+    <p>12 November 2015: Adding help text snippets in Info tab. Enabling-disabling target analyzer options when uploading-deleting last 
+    target schema file accordingly. Fixed a bug (when deleting a target schema file, namespace element was also removed!)</p>
+    <p>12 November 2015: Updating configuration tab.</p>
     <p>04 November 2015: Last edited matching table row is now highlighted for 10 seconds. Added new option in Configuration tab to choose between stripped or full
-    source xpaths. Also changed configuration tab layout. Fixed bug (when adding a new map, html was not updated due to a javascript exception).</p>
+        source xpaths. Also changed configuration tab layout. Fixed bug (when adding a new map, html was not updated due to a javascript exception).</p>
     <p>03 November 2015: Project mavenized. Source Analyzer combos are filled with relative paths, removing the "domain" part.</p>
 
     <h5 style="text-decoration: underline;">October</h5>
