Fixing scrolling menu Firefox bug (for small screens)

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -28,13 +28,14 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>2015-11-13</b>
+    Version: <b>2015-11-16</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
     <h5 style="text-decoration: underline;">November</h5> 
+    <p>16 November 2015: Fixing scrolling menu Firefox bug (for small screens) </p>
     <p>12 November 2015: Adding help text snippets in Info tab. Enabling-disabling target analyzer options when uploading-deleting last 
     target schema file accordingly. Fixed a bug (when deleting a target schema file, namespace element was also removed!)</p>
     <p>12 November 2015: Updating configuration tab.</p>
