--- a/src/main/webapp/message.html
+++ b/src/main/webapp/message.html
@@ -27,7 +27,7 @@ Authors : Georgios Samaritakis, Konstantina Konsolaki.
 This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
 -->
-<title>Site Maintenance</title>
+<title>Message</title>
 <style>
   body { text-align: center; padding: 150px; }
   h1 { font-size: 50px; }
