Xsd schema mechanism (hopefully) completed!

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -28,16 +28,18 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>2015-11-16</b>
+    Version: <b>2015-11-27</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
     <h5 style="text-decoration: underline;">November</h5> 
+    <p>27 November 2015: XSD upload mechanism complete. Added extra target analyzer (XML) and target paths option.
+        Will probably require some testing...</p>
     <p>16 November 2015: Fixing scrolling menu Firefox bug (for small screens) </p>
     <p>12 November 2015: Adding help text snippets in Info tab. Enabling-disabling target analyzer options when uploading-deleting last 
-    target schema file accordingly. Fixed a bug (when deleting a target schema file, namespace element was also removed!)</p>
+        target schema file accordingly. Fixed a bug (when deleting a target schema file, namespace element was also removed!)</p>
     <p>12 November 2015: Updating configuration tab.</p>
     <p>04 November 2015: Last edited matching table row is now highlighted for 10 seconds. Added new option in Configuration tab to choose between stripped or full
         source xpaths. Also changed configuration tab layout. Fixed bug (when adding a new map, html was not updated due to a javascript exception).</p>
