Fixing multiple label generator XML bug. Adding x3ml engine version number.

--- a/src/main/webapp/x3mlEngine.html
+++ b/src/main/webapp/x3mlEngine.html
@@ -107,9 +107,8 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 
                     <div class="row">
                         <div class="col-sm-12">
-                            <label class="control-label" >Target Record RDF File </label>     
-                            <!--                        <textarea id="engineResult" style="width:100%;"  class="form-control input-sm" rows="5" readonly="readonly"/>-->
-                            <img class="loader" src="js/select2-3.5.1/select2-spinner.gif" style="display:none;"></img>
+                            <label class="control-label" >Target Record RDF File (Using x3ml engine 2015-11-26-0675c94)</label>     
+                            <img class="loader" src="js/select2-3.5.1/select2-spinner.gif" style="display:none;"/>
 
                             <textarea id="engineResult" style="width:100%;" rows="20" readonly="readonly">
 
