Adding extra built-in generator names (Constant, prefLabel)

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -28,14 +28,14 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>2015-11-30 (c96e727)</b>
+    Version: <b>2015-11-30 (d2a2815)</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
     <h5 style="text-decoration: underline;">November</h5> 
-    <p>30 November 2015: Fixing multiple label generators XML bug.</p>
+    <p>30 November 2015: Fixing multiple label generators XML bug. Adding extra built-in generator names (Constant, prefLabel)</p>
     <p>27 November 2015: XSD upload mechanism complete. Added extra target analyzer (XML) and target paths option.
         Will probably require some testing...</p>
     <p>16 November 2015: Fixing scrolling menu Firefox bug (for small screens) </p>
