--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -28,11 +28,15 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>2015-11-30 (12dbcb7)</b>
+    Version: <b>2015-12-07 (12dbcb7)</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
+
+    <h5 style="text-decoration: underline;">December</h5> 
+    <p>07 December 2015: Introducing accordion columns functionality.</p>
+
 
     <h5 style="text-decoration: underline;">November</h5> 
     <p>30 November 2015: Fixing multiple label generators XML bug. Adding extra built-in generator names (Constant, prefLabel)</p>
