Changes due to Maze update

--- a/src/main/webapp/analysis.html
+++ b/src/main/webapp/analysis.html
@@ -29,11 +29,11 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <div class="well" id="graph"> 
     <form  role="form" >
     <fieldset>
-        <legend>Graph Representation</legend>
+        <legend>Analysis</legend>
         <br/>
         <p>
-            You may view a graph representation of your mapping by clicking on the following link:
-            <a onclick="viewGraph()" title="" target="_blank" >view Graph</a>
+            You may view an analysis of your mapping by clicking on the following link:
+            <a onclick="viewGraph()" title="" target="_blank" >view Analysis</a>
 
             
         </p>
