--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -28,15 +28,16 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>2016-01-07 (b0d255c)</b>
+    Version: <b>2016-01-07 (a8d2040)</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
     <h5 style="text-decoration: underline;">January</h5> 
+    <p>08 January 2016: Maze was updated and had to change labels and URLs.</p>
     <p>07 January 2016: Fixing view xml bug in viewPublished.</p>
-    
+
     <h5 style="text-decoration: underline;">December</h5> 
     <p>07 December 2015: Introducing accordion columns functionality. Fixing domain comments bug (xsl include-import mixup)</p>
 
