--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -28,13 +28,14 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>2016-01-08 (b23535f)</b>
+    Version: <b>2016-01-12 (e5320da)</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
     <h5 style="text-decoration: underline;">January</h5> 
+    <p>12 January 2016: Updating x3ml engine. Adding xpathPosition in argument types combo.</p>
     <p>08 January 2016: Maze was updated and had to change labels and URLs.</p>
     <p>07 January 2016: Fixing view xml bug in viewPublished.</p>
 
