Changed header once more. Updating x3ml engine.
Removed backgroung image, changed background color, shrunk font-size

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -28,13 +28,14 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>2016-01-21 (d6fcdfa)</b>
+    Version: <b>2016-01-26 (b169a17)</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
     <h5 style="text-decoration: underline;">January</h5>
+    <p>26 January 2016: Changed header once more. Updating x3ml engine.</p>
     <p>21 January 2016: Updating logo, favicon and x3ml engine.
         Started adding fail cases in post requests (Update and GetPart). This way if connection is lost, user gets an alert.</p>
     <p>20 January 2016: Fixed bug reported by Maria: After editing all mappings (raw XML mode) View Mode button did not work.</p>
