--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -28,13 +28,14 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>2016-01-26 (b169a17)</b>
+    Version: <b>2016-01-27 (11d4a37)</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
     <h5 style="text-decoration: underline;">January</h5>
+    <p>27 January 2016: Updating to enhance cooperation with xPaths. Now domain may start with "/","//" or no slash.  Updating x3ml engine.</p>
     <p>26 January 2016: Changed header once more. Updating x3ml engine.</p>
     <p>21 January 2016: Updating logo, favicon and x3ml engine.
         Started adding fail cases in post requests (Update and GetPart). This way if connection is lost, user gets an alert.</p>
