Added service to get xml for mapping version

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -28,16 +28,17 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>2016-02-02 (73701b3)</b>
+    Version: <b>2016-02-03 (431a833ded619980784c1f94b1872be4a3d174e6)</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
-     <h5 style="text-decoration: underline;">February</h5>
+    <h5 style="text-decoration: underline;">February</h5>
+    <p>03 February 2016: Added service to get Mapping version xml.</p>
     <p>02 February 2016: Added custom myPost to add timeout(20 sec). Checking response to detect redirection to 3M
-    and avoid "3M login inside 3MEditor" bug.</p>
-    
+        and avoid "3M login inside 3MEditor" bug.</p>
+
     <h5 style="text-decoration: underline;">January</h5>
     <p>29 January 2016: Reorganizing and documenting scripts. Extending copyright to 2016.</p>
     <p>27 January 2016: Updating to enhance cooperation with xPaths. Now domain may start with "/","//" or no slash.  Updating x3ml engine.</p>
