Fixing source-generator mixup bug

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -28,14 +28,17 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>2016-02-03 (501c72459a59526fc92684b7ddb91d2d8a157d84)</b>
+    Version: <b>2016-03-16 (1ba1de70e677d9185c859dc452fb5e91752c8786)</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
+    <h5 style="text-decoration: underline;">March</h5>
+    <p>16 March 2016: Fixed source file-generator file mixup bug.</p>
+
     <h5 style="text-decoration: underline;">February</h5>
-    <p>03 February 2016: Added service to get Mapping version xml. When adding a new map, only domain row is editable.</p>
+    <p>03 February 2016: Added service to get Mapping version xml. Fixed new map source combos bug: When adding a new map, only domain row is editable.</p>
     <p>02 February 2016: Added custom myPost to add timeout(20 sec). Checking response to detect redirection to 3M
         and avoid "3M login inside 3MEditor" bug.</p>
 
