Updating 3MTidy method call

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -28,13 +28,14 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>2016-03-16 (1ba1de70e677d9185c859dc452fb5e91752c8786)</b>
+    Version: <b>2016-03-21 (9590bf110fdaec7c6a4e0c85cfab868e4db4af93)</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
 
     <h5 style="text-decoration: underline;">March</h5>
+    <p>21 March 2016: Updating 3MTidy method call.</p>
     <p>16 March 2016: Fixed source file-generator file mixup bug.</p>
 
     <h5 style="text-decoration: underline;">February</h5>
