Fixing "hiding add buttons when updating mappings raw xml" bug. Removing margin-left from generators inside additional

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -28,11 +28,14 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>2016-03-21 (9590bf110fdaec7c6a4e0c85cfab868e4db4af93)</b>
+    Version: <b>2016-04-04 (42c8867df25f9630fde271d98bb204cabd2402f6)</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
+    <h5 style="text-decoration: underline;">April</h5>
+    <p>04 April 2016: Fixing "hiding add buttons when updating mappings raw xml" bug. Removing margin-left from generators inside additional 
+    to give more width.</p>
 
     <h5 style="text-decoration: underline;">March</h5>
     <p>21 March 2016: Updating 3MTidy method call.</p>
