--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -28,12 +28,13 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>2016-04-04 (42c8867df25f9630fde271d98bb204cabd2402f6)</b>
+    Version: <b>2016-04-15 (b5eb5f4e541e53a6b0b9fef51971c0e974632abc)</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
     <h5 style="text-decoration: underline;">April</h5>
+    <p>15 April 2016: Fixing transformation redirect bug. Updating x3ml Engine used.</p>
     <p>04 April 2016: Fixing "hiding add buttons when updating mappings raw xml" bug. Removing margin-left from generators inside additional 
     to give more width.</p>
 
