Updating about tab with version number

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -28,15 +28,21 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 -->
 <fieldset>
     <legend>3MEditor</legend>
-    Version: <b>2016-04-15 (d927055c455f6c998ad2b44acdfb26e80a4ca649)</b>
+    Version: <b>3.0</b><br/>
+    Build: <b>2016-04-22 (Fill in Github commit id)</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
+    <h4 style="text-decoration: underline;">2016</h4>
+
+
+
     <h5 style="text-decoration: underline;">April</h5>
+    <p>22 April 2016: Release 3.0.</p>
     <p>15 April 2016: Fixing transformation redirect and source encoding bugs. Updating x3ml Engine used. </p>
     <p>04 April 2016: Fixing "hiding add buttons when updating mappings raw xml" bug. Removing margin-left from generators inside additional 
-    to give more width.</p>
+        to give more width.</p>
 
     <h5 style="text-decoration: underline;">March</h5>
     <p>21 March 2016: Updating 3MTidy method call.</p>
@@ -58,6 +64,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <p>08 January 2016: Maze was updated and had to change labels and URLs.</p>
     <p>07 January 2016: Fixing view xml bug in viewPublished.</p>
 
+    <h4 style="text-decoration: underline;">2015</h4>
     <h5 style="text-decoration: underline;">December</h5>
     <p>07 December 2015: Introducing accordion columns functionality. Fixing domain comments bug (xsl include-import mixup)</p>
 
