--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,14 +29,15 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.0</b><br/>
-    Build: <b>2016-04-22 (Fill in Github commit id)</b>
+    Build: <b>2016-07-12 (Fill in Github commit id)</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
     <h4 style="text-decoration: underline;">2016</h4>
 
-
+    <h5 style="text-decoration: underline;">July</h5>
+    <p>12 July 2016: Adding alert message when fillCombos fails.</p>
 
     <h5 style="text-decoration: underline;">April</h5>
     <p>22 April 2016: Release 3.0.</p>
