Improving support for owl target schemas. Fixing upload issues and providing better user feedback

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.0</b><br/>
-    Build: <b>2016-07-12 (Fill in Github commit id)</b>
+    Build: <b>2016-07-25 (24a73cf03e66be06cb43e31fcd557cff68c6ca86)</b>
 </fieldset>
 
 <fieldset>
@@ -37,6 +37,8 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2016</h4>
 
     <h5 style="text-decoration: underline;">July</h5>
+    <p>25 July 2016: Improving support for owl target schemas. Fixing upload issues and providing better
+    user feedback.</p>
     <p>12 July 2016: Adding alert message when fillCombos fails.</p>
 
     <h5 style="text-decoration: underline;">April</h5>
