Improvements concerning source and target analyzers.
Mapping 663 helped us find problems concerning analyzer behavior when
uploading xsd files or rdf with xml extension.

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,13 +29,17 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.0</b><br/>
-    Build: <b>2016-07-25 (24a73cf03e66be06cb43e31fcd557cff68c6ca86)</b>
+    Build: <b>2016-08-05 (e13be5d99c3ca8438488128f86676a0190d81160)</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
     <h4 style="text-decoration: underline;">2016</h4>
 
+     <h5 style="text-decoration: underline;">August</h5>
+     <p>05 August 2016: Improving source analyzer behavior when using xsd files. Minor changes involving target analyzers.
+     Configuration tab texts revised.</p>
+    
     <h5 style="text-decoration: underline;">July</h5>
     <p>25 July 2016: Improving support for owl target schemas. Fixing upload issues and providing better
     user feedback.</p>
