Adding support for ttl target schemas. Updating x3ml engine.

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,13 +29,16 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.0</b><br/>
-    Build: <b>2016-08-05 (e13be5d99c3ca8438488128f86676a0190d81160)</b>
+    Build: <b>2016-09-06 (8dbb10ab1c8dbdf5a261452c6368f98b40a2621b)</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
     <h4 style="text-decoration: underline;">2016</h4>
 
+    <h5 style="text-decoration: underline;">September</h5>
+     <p>06 September 2016: Adding support for ttl target schemas. Updating x3mlEngine to 1.7.1.</p>
+    
      <h5 style="text-decoration: underline;">August</h5>
      <p>05 August 2016: Improving source analyzer behavior when using xsd files. Minor changes involving target analyzers.
      Configuration tab texts revised.</p>
