--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.0</b><br/>
-    Build: <b>2016-09-06 (8dbb10ab1c8dbdf5a261452c6368f98b40a2621b)</b>
+    Build: <b>2016-09-19 (ffa86645eb9db0994dae46a64a0db7af4fa00609)</b>
 </fieldset>
 
 <fieldset>
@@ -37,15 +37,16 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2016</h4>
 
     <h5 style="text-decoration: underline;">September</h5>
-     <p>06 September 2016: Adding support for ttl target schemas. Updating x3mlEngine to 1.7.1.</p>
-    
-     <h5 style="text-decoration: underline;">August</h5>
-     <p>05 August 2016: Improving source analyzer behavior when using xsd files. Minor changes involving target analyzers.
-     Configuration tab texts revised.</p>
-    
+    <p>19 September 2016: Fixing a bug in Transformation tab (failed to load source file)</p>
+    <p>06 September 2016: Adding support for ttl target schemas. Updating x3mlEngine to 1.7.1.</p>
+
+    <h5 style="text-decoration: underline;">August</h5>
+    <p>05 August 2016: Improving source analyzer behavior when using xsd files. Minor changes involving target analyzers.
+        Configuration tab texts revised.</p>
+
     <h5 style="text-decoration: underline;">July</h5>
     <p>25 July 2016: Improving support for owl target schemas. Fixing upload issues and providing better
-    user feedback.</p>
+        user feedback.</p>
     <p>12 July 2016: Adding alert message when fillCombos fails.</p>
 
     <h5 style="text-decoration: underline;">April</h5>
