Added support for global_variable and differentURI (attributes added in new x3ml schema v1.1)

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.0</b><br/>
-    Build: <b>2016-09-19 (ffa86645eb9db0994dae46a64a0db7af4fa00609)</b>
+    Build: <b>2016-09-26 (a24d4f7f38343c734727bb589cc4a86d18c1f48d)</b>
 </fieldset>
 
 <fieldset>
@@ -37,6 +37,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2016</h4>
 
     <h5 style="text-decoration: underline;">September</h5>
+    <p>26 September 2016: Added support for global_variable and differentURI (attributes added in new x3ml schema v1.1).</p>
     <p>19 September 2016: Fixing a bug in Transformation tab (failed to load source file)</p>
     <p>06 September 2016: Adding support for ttl target schemas. Updating x3mlEngine to 1.7.1.</p>
 
