Instance_info block extreme makeover
New visual representation for instance_info using more icons. Work in
progress (have to decide what to do with variables)

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,13 +29,16 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.0</b><br/>
-    Build: <b>2016-09-29 (649eb815c05a09effd87348559efde31307827a7)</b>
+    Build: <b>2016-10-06 (3ad48fc44b4c18a0e73a0e6c649d3c9de239b7ff)</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
     <h4 style="text-decoration: underline;">2016</h4>
 
+     <h5 style="text-decoration: underline;">October</h5>
+     <p>06 October 2016: Instance_info block extreme makeover.</p>
+    
     <h5 style="text-decoration: underline;">September</h5>
     <p>29 September 2016: Slight change concerning json output for Jena reasoner, to improve behavior (namespaces and
     invalid messages issue)</p>
