Change landing tab depending on mapping progress.
On opening show table tab if there are more than 1 mapping or link
elements, otherwise show info tab.

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,6 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.0</b><br/>
+    Build: <b>2016-10-12 (5a0f8299e84789149faf1a06133681d9308eb5d9)</b>
 </fieldset>
 
 <fieldset>
@@ -38,7 +39,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h5 style="text-decoration: underline;">October</h5>
     <p>12 October 2016: Language in instance_info is now a drop-down filled with language codes (ISO639-1). Fixed a bug that
     allowed adding multiple elements when there should be only one (e.g. language, constant). Changed timeout for view mode from 10 secs
-    to 20.</p>
+    to 20. On opening show table tab if there are more than 1 mapping or link elements, otherwise show info tab.</p>
     <p>06 October 2016: Instance_info block extreme makeover.</p>
 
     <h5 style="text-decoration: underline;">September</h5>
