--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.0</b><br/>
-    Build: <b>2016-10-13 (862440442533b42aea08dd43542f5a86cb0109c8)</b>
+    Build: <b>2016-10-14 (aeab1dcda3fb08c497fa5a87dcc9da6766e2b313)</b>
 </fieldset>
 
 <fieldset>
@@ -37,7 +37,9 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2016</h4>
 
     <h5 style="text-decoration: underline;">October</h5>
-    <p>13 October 2016: Breaking long strings in targetPath gracefully when there is additional node. (see cerifNEW3 774 by Athina)</p>
+    <p>14 October 2016: More visual changes (instance_info block). Language drop-down now has presents full language names, 
+    but keeps storing acronyms.</p>
+    <p>13 October 2016: Breaking long strings in targetPath gracefully when there is additional node. (see cerifNEW3 714 by Athina)</p>
     <p>12 October 2016: Language in instance_info is now a drop-down filled with language codes (ISO639-1). Fixed a bug that
     allowed adding multiple elements when there should be only one (e.g. language, constant). Changed timeout for view mode from 10 secs
     to 20. On opening show table tab if there are more than 1 mapping or link elements, otherwise show info tab.</p>
