Changing description-language order in edit mode. Removed small from instance_info values as Martin asked.

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.0</b><br/>
-    Build: <b>2016-10-14 (aeab1dcda3fb08c497fa5a87dcc9da6766e2b313)</b>
+    Build: <b>2016-10-17 (6e61a81d70b6b960fb2e86171e7e3990a75e788e)</b>
 </fieldset>
 
 <fieldset>
@@ -37,6 +37,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2016</h4>
 
     <h5 style="text-decoration: underline;">October</h5>
+    <p>17 October 2016: Changing description-language order in edit mode. Removed small from instance_info values as Martin asked.</p>
     <p>14 October 2016: More visual changes (instance_info block). Language drop-down now has presents full language names, 
     but keeps storing acronyms.</p>
     <p>13 October 2016: Breaking long strings in targetPath gracefully when there is additional node. (see cerifNEW3 714 by Athina)</p>
