--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.0</b><br/>
-    Build: <b>2016-10-19 (eaca3c5de7d6d8924a7bc71b2fcf2afee9438f27)</b>
+    Build: <b>2016-10-26 (460c068527973a67566ffdf476e2c287bfa47620)</b>
 </fieldset>
 
 <fieldset>
@@ -37,7 +37,8 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2016</h4>
 
     <h5 style="text-decoration: underline;">October</h5>
-    <p>19 October 2016: Improving Jena reasoner to support multiple classes and use different ordering</p>
+    <p>26 October 2016: Changing collapse/expand column icons.</p>
+    <p>19 October 2016: Improving Jena reasoner to support multiple classes and use different ordering.</p>
     <p>17 October 2016: Changing description-language order in edit mode. Removed small from instance_info values as Martin asked.
     Fixed a bug (source analyzer did not work if user uploaded xsd file and did not reload)</p>
     <p>14 October 2016: More visual changes (instance_info block). Language drop-down now has presents full language names, 
