MAJOR UPDATE! Generators is now an extra tab!

--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,13 +29,16 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.0</b><br/>
-    Build: <b>2016-10-26 (460c068527973a67566ffdf476e2c287bfa47620)</b>
+    Build: <b>2016-11-02 (460c068527973a67566ffdf476e2c287bfa47620)</b>
 </fieldset>
 
 <fieldset>
     <legend>Changelog</legend>
     <h4 style="text-decoration: underline;">2016</h4>
 
+    <h5 style="text-decoration: underline;">November</h5>
+    <p>02 November 2016: Major update: Generators tab with full functionality and some extra fixes! Updating x3mlEngine to 1.7.3.</p>
+    
     <h5 style="text-decoration: underline;">October</h5>
     <p>26 October 2016: Changing collapse/expand column icons.</p>
     <p>19 October 2016: Improving Jena reasoner to support multiple classes and use different ordering.</p>
