--- a/src/main/webapp/readme.html
+++ b/src/main/webapp/readme.html
@@ -29,7 +29,7 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
 <fieldset>
     <legend>3MEditor</legend>
     Version: <b>3.0</b><br/>
-    Build: <b>2016-11-02 (460c068527973a67566ffdf476e2c287bfa47620)</b>
+    Build: <b>2016-11-03 (49fb6089f661dccd45a1649796eb3a1009fa1c6a)</b>
 </fieldset>
 
 <fieldset>
@@ -37,19 +37,20 @@ This file is part of the 3MEditor webapp of Mapping Memory Manager project.
     <h4 style="text-decoration: underline;">2016</h4>
 
     <h5 style="text-decoration: underline;">November</h5>
+    <p>03 November 2016: Removed different_URI completely (obsolete) and fixed missing global_variable in intermediate.</p>
     <p>02 November 2016: Major update: Generators tab with full functionality and some extra fixes! Updating x3mlEngine to 1.7.3.</p>
-    
+
     <h5 style="text-decoration: underline;">October</h5>
     <p>26 October 2016: Changing collapse/expand column icons.</p>
     <p>19 October 2016: Improving Jena reasoner to support multiple classes and use different ordering.</p>
     <p>17 October 2016: Changing description-language order in edit mode. Removed small from instance_info values as Martin asked.
-    Fixed a bug (source analyzer did not work if user uploaded xsd file and did not reload)</p>
+        Fixed a bug (source analyzer did not work if user uploaded xsd file and did not reload)</p>
     <p>14 October 2016: More visual changes (instance_info block). Language drop-down now has presents full language names, 
-    but keeps storing acronyms.</p>
+        but keeps storing acronyms.</p>
     <p>13 October 2016: Breaking long strings in targetPath gracefully when there is additional node. (see cerifNEW3 714 by Athina)</p>
     <p>12 October 2016: Language in instance_info is now a drop-down filled with language codes (ISO639-1). Fixed a bug that
-    allowed adding multiple elements when there should be only one (e.g. language, constant). Changed timeout for view mode from 10 secs
-    to 20. On opening show table tab if there are more than 1 mapping or link elements, otherwise show info tab.</p>
+        allowed adding multiple elements when there should be only one (e.g. language, constant). Changed timeout for view mode from 10 secs
+        to 20. On opening show table tab if there are more than 1 mapping or link elements, otherwise show info tab.</p>
     <p>06 October 2016: Instance_info block extreme makeover.</p>
 
     <h5 style="text-decoration: underline;">September</h5>
